Change calls to deprecated methods in tests to their replacements.
ClassTypeInformation is deprecated and will be removed, use TypeInformation instead.
StringUtils.trimWhitespace can be replaced with the strip method called on the String object.
StandardAnnotationMetadata is deprecated in favor of the factory method AnnotationMetadata.introspect(Class).